Orange main color and better alignment for issue entry boxes

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 }
 
 .list > ul > li {
-  border: 0.5px solid #673AB7;
+  border: 0.5px solid #FF5722;
   padding: 5px;
 }
 
