--- a/src/IssueMenu.css
+++ b/src/IssueMenu.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  border: 0.5px solid gray;
+  border: 0.5px solid #FF5722;
   border-radius: 2px;
 }
 
@@ -11,7 +11,7 @@
   outline: 0;
   background: transparent;
   border: none;
-  padding: 0px;
+  padding: 0px 5px;
   margin: 0px;
   height: 100%;
   width: auto;
@@ -24,6 +24,8 @@
 }
 
 .menu button:hover {
-  background-color: gray;
+  background-color: #757575;
+  border-radius: 2px;
+  color: white;
   cursor: pointer;
 }
